First commited as before_68573_rev1